# conxius-wallet

./: .env.example  .gitguardian.yaml  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .markdownlint.json  .npmrc  AGENTS.md  App.tsx  App.tsx.bak  App.tsx.patch  BOS_KNOWLEDGE_GRAPH.md  BUILD_REPAIR_REPORT_2026_02_16.md  Business_State.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GAPS_AND_RECOMMENDATIONS.md  IMPLEMENTATION_REGISTRY.md  LICENSE.md  MAESTRO_SETUP.md  MIGRATION_NOTE.md  MONETIZATION.md  PARTNERS_AND_COMPLIANCE.md  PRD.md  PROJECT_CONTEXT.md  README.md  REFERENCE_CLIENT_INVENTORY.md  REPAIR_REPORT_2026_02_16.md  REPO_OWNERSHIP.md  RISK_REGISTRY.md  ROADMAP.md  SECURITY.md  SUPPORT.md  Sovereign_State.md  WHITEPAPER.md  agents_update.patch  app_imports.patch  (+64 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.idx/: mcp.json
.jules/: cxn-arch-guardian.md  sentinel.md
android/: .gitignore  build.gradle  build.gradle.kts  gradle.properties  run_build.bat  settings.gradle  variables.gradle
components/: AssetDetailModal.tsx  BackupAuditModal.tsx  Benchmarking.tsx  BottomNav.tsx  CitadelManager.tsx  Dashboard.tsx  DeFiDashboard.tsx  Documentation.tsx  ErrorBoundary.tsx  GovernancePortal.tsx  HandoffProtocol.tsx  IdentityManager.tsx  InvestorDashboard.tsx  LabsExplorer.tsx  LockScreen.tsx  Marketplace.tsx  MobileMenu.tsx  NTTBridge.tsx  NodeSettings.tsx  Onboarding.tsx  PaymentPortal.tsx  PrivacyEnclave.tsx  RecommendedHardware.tsx  ReleaseManager.tsx  ReserveSystem.tsx  RewardsHub.tsx  SatoshiAIChat.tsx  Security.tsx  Settings.tsx  Sidebar.tsx  SignLoginMessageModal.tsx  SilentPayments.tsx  SovereignPolicies.tsx  (+7 more)
native/silent-payments/: Cargo.toml  README.md
native/silent-payments-jni/: Cargo.toml  README.md
native/silent-payments-jni/src/: codec.rs  derive.rs  error.rs  lib.rs  scan.rs
native/silent-payments-jni/tests/: codec.rs
native/silent-payments-jni/tests/fixtures/: bip32-cross-language.json
native/silent-payments/examples/: silent_payment_bench.rs
native/silent-payments/src/: lib.rs
native/silent-payments/tests/: official_bip352.rs
native/silent-payments/tests/data/: README.md
(+483 files in other folders)
