[package]
name = "conxius-silent-payments-jni"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Thin JNI boundary for the Conxius Wallet BIP-352 scanner"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitcoin = { version = "0.32.7", default-features = false, features = ["std"] }
bip39 = { version = "2.2.0", default-features = false, features = ["std", "all-languages"] }
conxius-silent-payments = { path = "../silent-payments" }
jni = "0.22.4"
secp256k1 = "0.31.1"
thiserror = "2.0.12"
zeroize = "1.8.1"

[dev-dependencies]
serde_json = "1.0.140"
sha2 = "0.11.0"
