[package]
name = "conxius-silent-payments"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "BIP-352 receiver scan primitives for Conxius Wallet"
license = "MIT"

[dependencies]
secp256k1 = "0.31.1"
sha2 = "0.10.8"
thiserror = "2.0.12"
zeroize = "1.8.1"

[dev-dependencies]
ripemd = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
